remove unused classnames

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -169,19 +169,19 @@
       <h2 class="m-0">Storyboarder is a tool that makes it easy to visualize a story as fast as you can think. Storyboarding lets storytellers easily, and cheaply visualize their stories. It can be used to test the narrative, make changes, and be better prepared for production, reducing costs greatly, resulting in a better story.</h2>
 
       <p><strong>Draw your story</strong></p>
-      <p class="larger">
+      <p>
           You can draw and organize your storyboards in a traditional way, either using our sketching system or using an external tool like Photoshop. Just add a board and start drawing.</p>
 
       <p><strong>Lay out scenes in Shot Generator</strong></p>
-      <p class="larger">If you can't draw, you can also layout scenes using Shot Generator, a feature that allows you to quickly add characters, pose them, add objects, and set up cameras to create shots.</p>
+      <p>If you can't draw, you can also layout scenes using Shot Generator, a feature that allows you to quickly add characters, pose them, add objects, and set up cameras to create shots.</p>
 
       <p><strong>Immerse yourself in your story.</strong></p>
-      <p class="larger">If you own an Oculus Quest or other VR headset, you can create and edit your scene in VR, and set up virtual cameras. This is the fastest way to set up scenes and shots.</p>
+      <p>If you own an Oculus Quest or other VR headset, you can create and edit your scene in VR, and set up virtual cameras. This is the fastest way to set up scenes and shots.</p>
 
       <h1 style="margin-bottom: 0px;font-size: 65px;
       font-weight: 900;">Storyboarding results in better stories.</h1>
-      <p class="larger">These directors almost exclusively use storyboarding to visualize their stories...</p>
-      <p class="larger">Ridley Scott,
+      <p>These directors almost exclusively use storyboarding to visualize their stories...</p>
+      <p>Ridley Scott,
           Wes Anderson,
           Alfred Hitchcock,
           Christopher Nolan,
@@ -193,21 +193,21 @@
           Martin Scorsese,
           The Coen Brothers,
           Robert Zemeckis</p>
-      <p class="larger">Now there is a free tool to help anyone visualize their stories: <strong>Storyboarder.</strong></p>
+      <p>Now there is a free tool to help anyone visualize their stories: <strong>Storyboarder.</strong></p>
 
       <h2 style="margin-bottom: 30px;">Used to Storyboard Movies and Shows like...</h2>
 
       <img src="https://wonderunit.com/storyboarder/poster-xmen.jpg">
-      <p class="larger"><strong>X-Men: Dark Phoenix</strong></p>
+      <p><strong>X-Men: Dark Phoenix</strong></p>
 
       <img src="https://wonderunit.com/storyboarder/poster-shameless.jpg">
-      <p class="larger"><strong>Shameless</strong></p>
+      <p><strong>Shameless</strong></p>
 
       <img src="https://wonderunit.com/storyboarder/poster-cruella.jpg">
-      <p class="larger"><strong>Disney's Cruella</strong></p>
+      <p><strong>Disney's Cruella</strong></p>
 
       <img src="https://wonderunit.com/storyboarder/poster-terminator.jpg">
-      <p class="larger"><strong>Terminator: Dark Fate</strong></p>
+      <p><strong>Terminator: Dark Fate</strong></p>
 
       <img src="https://wonderunit.com/storyboarder/poster-newmutants.jpg">
       <p><strong>The New Mutants</strong></p>
@@ -228,7 +228,7 @@
       <p><strong>Child's Play</strong></p>
 
       <h2 style="margin-bottom: 0px;">Fast and Simple</h2>
-      <p style="margin-bottom: 30px;" class="larger">Storyboarder is designed to be simple. We included the tools you need to board fast, and removed everything you don't need.</p>
+      <p style="margin-bottom: 30px;">Storyboarder is designed to be simple. We included the tools you need to board fast, and removed everything you don't need.</p>
 
       <!-- TODO https://wonderunit.com/storyboarder/fast-interface-overlay.png and https://wonderunit.com/storyboarder/screenshot.gif -->
       <!-- <img src="https://wonderunit.com/storyboarder/fast-interface-overlay.png"> -->
@@ -476,7 +476,7 @@
 
       <div class="row">
         <div class="large-5 columns">
-          <p class="larger" style="font-size: 21px; text-shadow: 0px 1px 36px black; ">Can't draw? Have a shot list? Or just want to quickly mockup reference shots without drawing? Just type a description into the Shot Generator in the sidebar, press return, and generate as many shots as you'd like. Change parameters as you want. Shots are fully customizable.<br/><br/>Double click to put it in the reference layer of the board. The generated shots are meant to be drawn over so they can be used as a guide.<br/><br/>If you can describe a shot and draw a smiley face, you can storyboard!</p>
+          <p style="font-size: 21px; text-shadow: 0px 1px 36px black; ">Can't draw? Have a shot list? Or just want to quickly mockup reference shots without drawing? Just type a description into the Shot Generator in the sidebar, press return, and generate as many shots as you'd like. Change parameters as you want. Shots are fully customizable.<br/><br/>Double click to put it in the reference layer of the board. The generated shots are meant to be drawn over so they can be used as a guide.<br/><br/>If you can describe a shot and draw a smiley face, you can storyboard!</p>
         </div>
         <div class="large-7 columns">
          <video loop="" muted="" autoplay="" style="width: 100%; border-radius: 6px; box-shadow: 0px 2px 15px rgba(0,0,0,0.1); border-bottom: 10px solid #333;" loading="lazy">
@@ -624,17 +624,17 @@
     <div class="row">
       <div class="medium-4 columns">
         <h1 style="margin-bottom: 0px;font-size: 60px; text-align: center; font-weight: 800; margin-bottom: -15px;">250K+</h1>
-        <p class="larger" style="text-align: center; font-size: 22px;">Registered Users</p>
+        <p style="text-align: center; font-size: 22px;">Registered Users</p>
       </div>
 
       <div class="medium-4 columns">
         <h1 style="margin-bottom: 0px;font-size: 60px; text-align: center; font-weight: 800; margin-bottom: -15px;">1.5 million+</h1>
-        <p class="larger" style="text-align: center; font-size: 22px;">Downloads</p>
+        <p style="text-align: center; font-size: 22px;">Downloads</p>
       </div>
 
       <div class="medium-4 columns">
         <h1 style="margin-bottom: 0px;font-size: 60px; text-align: center; font-weight: 800; margin-bottom: -15px;">50K+</h1>
-        <p class="larger" style="text-align: center; font-size: 22px;">Daily Users</p>
+        <p style="text-align: center; font-size: 22px;">Daily Users</p>
       </div>
 
     </div>
@@ -648,11 +648,11 @@
 
       <div class="row">
         <div class="large-6 columns">
-          <p class="larger">Storyboarder is niche software. The market is tiny. There's an inverse relationship between the market size and price we have to charge to make money. We are building this tool for ourselves to make better movies. We make money making movies, not software. We believe creative software should be free. Let's be completely real – I've never known anyone working on dope ass shit to be paying for the software they use anyways.</p>
+          <p>Storyboarder is niche software. The market is tiny. There's an inverse relationship between the market size and price we have to charge to make money. We are building this tool for ourselves to make better movies. We make money making movies, not software. We believe creative software should be free. Let's be completely real – I've never known anyone working on dope ass shit to be paying for the software they use anyways.</p>
         </div>
         <div class="large-6 columns">
-          <p class="larger">Storyboard Pro - Shitty software that costs $1000? Boords and other online software that just allows you to order images and costs a monthly fee?</p>
-          <!-- <p class="larger">Fuck those guys.</p>
+          <p>Storyboard Pro - Shitty software that costs $1000? Boords and other online software that just allows you to order images and costs a monthly fee?</p>
+          <!-- <p>Fuck those guys.</p>
           <p style="font-size: 13px;">And fuck Sony Pictures. They make the worst fucking movies. What does that have to do with free software? Not much. Maybe use free software to make great movies and don't waste money going to a Sony movie? Fuck.</p>
           <p style="font-size: 13px;">And fuck Dave Morin. And Gary Vaynerchuk. Ugh.</p> -->
         </div>
@@ -668,11 +668,11 @@
 
       <div class="row">
         <div class="large-4 columns">
-          <p class="larger">"The print, shoot, import workflow is super slick. And it’s the best case I’ve ever seen for QR codes. Well done!"</p>
+          <p>"The print, shoot, import workflow is super slick. And it’s the best case I’ve ever seen for QR codes. Well done!"</p>
           <img src="https://wonderunit.com/storyboarder/johnaugust.jpg" style="width: 60px; border-radius: 50%; float: left; margin-right: 20px;" loading="lazy"><p style="margin-top: 22px;margin-bottom: -5px;">John August</p><p>Writer, Host of ScriptNotes.</p>
         </div>
         <div class="large-4 columns">
-          <p class="larger">"Holy effin dickbutt. This is the best. Far better than anything else out there, and I've basically seen it all."</p>
+          <p>"Holy effin dickbutt. This is the best. Far better than anything else out there, and I've basically seen it all."</p>
          <img src="https://wonderunit.com/storyboarder/psql.jpg" style="width: 60px; border-radius: 50%; float: left; margin-right: 20px;" loading="lazy"><p style="margin-top: 22px;margin-bottom: -5px;">Pasquale D'Silva</p><p>Animator, Co-founder Thinko.</p>
         </div>
 
@@ -682,7 +682,7 @@
 
 
         <div class="large-4 columns">
-          <p class="larger">"You don't have a background layer? To be honest, if you hired me to work on your storyboards, I wouldn't use this."</p>
+          <p>"You don't have a background layer? To be honest, if you hired me to work on your storyboards, I wouldn't use this."</p>
          <img src="https://wonderunit.com/storyboarder/matthewtaylor.jpg" style="width: 60px; border-radius: 50%; float: left; margin-right: 20px;" loading="lazy"><p style="margin-top: 22px;margin-bottom: -5px;">Matthew A. Taylor</p><p>Live Action Storyboard Artist</p>
         </div>
       </div>
