reduce h1 size to fit on page

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -178,8 +178,7 @@
       <p><strong>Immerse yourself in your story.</strong></p>
       <p>If you own an Oculus Quest or other VR headset, you can create and edit your scene in VR, and set up virtual cameras. This is the fastest way to set up scenes and shots.</p>
 
-      <h1 style="margin-bottom: 0px;font-size: 65px;
-      font-weight: 900;">Storyboarding results in better stories.</h1>
+      <h1>Storyboarding results in better stories.</h1>
       <p>These directors almost exclusively use storyboarding to visualize their stories...</p>
       <p>Ridley Scott,
           Wes Anderson,
