--- a/storyboarder.html
+++ b/storyboarder.html
@@ -129,7 +129,7 @@
       <div class="inner-cover cover">
         <div class="centered">
           <h1 class="headline font-thin mb-2">Storyboarder</h1>          
-          <h2 class="font-thin" style="margin: 0.5em 0 1.25em 0;">The best way to visualize your story.</h2>
+          <h2 class="font-thin" style="margin: 0.5em 0 1.25em 0;">The best way to visualize your&nbsp;story.</h2>
           <a href="#" class="button button--download" style="margin: 1em 0;">
             Download for Free
           </a>
