example 3-col features grid

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -511,107 +511,175 @@
 <p>Key commands really speed up your work. Pressing "N" for new board, and left and right arrows from navigating is essential. For some, knowing all the key commands is the key to working quickly. If you'd like to know what's possible, just press <kbd>Command</kbd> + <kbd>K</kbd></p>
 
 
-<section>
-  <div class="row">
-    <div class="large-12 columns">
-      <h2>Just a few features...</h2>
-      <div class="row">
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Simple, Smooth Drawing</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Super Simple Interface</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Printed Worksheets</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Works with Wacom</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Easy Organization</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Draw Straight Lines</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Works with Fountain</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Open in Photoshop</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Measure Line Mileage</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Guides to Help Drawing</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Reference Layer</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Onion Skin</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Track Changes</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Collaborate on Github</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Export to Formats</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-        <div class="large-3 columns">
-          <img src="https://wonderunit.com/storyboarder/image.png" width="100%" style="height: 150px;" loading="lazy">
-          <h4>Built with Love</h4>
-          <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
-        </div>
-      </div>
-
-      <h3><a href="/storyboarder/faq/">Please click here to read the FAQ to learn more!</a></h3>
-
+<h2>Just a few features...</h2>
+<div class="features-grid w-large">
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
     </div>
+    <h4>Simple, Smooth Drawing</h4>
+    <p>5 tools, Incredibly fast drawing engine pressure sensitive.</p>
   </div>
-</section>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Super Simple Interface</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Printed Worksheets</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Works with Wacom</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Easy Organization</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Draw Straight Lines</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Works with Fountain</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Open in Photoshop</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Measure Line Mileage</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Guides to Help Drawing</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Reference Layer</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Onion Skin</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Track Changes</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Collaborate on Github</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Export to Formats</h4>
+    <p></p>
+  </div>
+  <div>
+    <div style="--aspect-ratio: 16 / 9;">
+      <img
+        src="https://wonderunit.com/storyboarder/image.png"
+        loading="lazy"
+      >
+    </div>
+    <h4>Built with Love</h4>
+    <p></p>
+  </div>
+</div>
+
+<h3><a href="/storyboarder/faq/">Please click here to read the FAQ to learn more!</a></h3>
+
 
 <section>
     <div class="row" style="margin-bottom: 30px;">
