--- a/storyboarder.html
+++ b/storyboarder.html
@@ -87,7 +87,7 @@
                 <a href="/technology">Technology</a>
                 <ul>
                   <li>
-                    <a href="#">Storyboarder</a>
+                    <a href="/storyboarder">Storyboarder</a>
                   </li>
                   <li>
                     <a href="#">Shot Core</a>
