--- a/storyboarder.html
+++ b/storyboarder.html
@@ -772,7 +772,7 @@
           <p>We have been accused of trying to rethink the way things are done. "Why don't you just do it the way thousands have done it before?" "Why don't you just make your movie instead of making this tool?" These are the voices of closed-minded, common people. They lack the ability to dream of a better way. They don't push the human race forward. They discourage change. I hope you do not ignore them, but defy them.</p>
         </div>
         <div class="large-6 columns">
-          <p>Should other people want to use our tools to create something great, nothing should stand in the way of that. Additionally, we think it's important to listen to feedback and ideas, and if possible integrate the truly best ideas into the tool. I beleive great ideas are in all of us. Selfishly, I want to experience your stories. If I can make a tool to help you will them into the world, that would make me happy.</p>
+          <p>Should other people want to use our tools to create something great, nothing should stand in the way of that. Additionally, we think it's important to listen to feedback and ideas, and if possible integrate the truly best ideas into the tool. I believe great ideas are in all of us. Selfishly, I want to experience your stories. If I can make a tool to help you will them into the world, that would make me happy.</p>
 
           <p>Tools are not a replacement for work. The tool alone doesn't make anything. Work is hard. Refining work into great work is even harder. Storyboarder, at the highest level, is a drawing organizer. It makes drawing and ordering drawings simpler. You could do this with a stack of paper and a pencil. Anyone who makes broad claims otherwise is a liar.</p>
 
