example youtube embeds

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -168,14 +168,56 @@
 
       <h2 class="m-0">Storyboarder is a tool that makes it easy to visualize a story as fast as you can think. Storyboarding lets storytellers easily, and cheaply visualize their stories. It can be used to test the narrative, make changes, and be better prepared for production, reducing costs greatly, resulting in a better story.</h2>
 
-      <p><strong>Draw your story</strong></p>
+      <!-- storyboarder youtube video -->
+      <div
+        class="w-large"
+        style="--aspect-ratio: 16 / 9;"
+      >
+        <iframe
+          src="https://www.youtube-nocookie.com/embed/ssPIU3qaVog"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+      </div>
+      <p class="m-0"><strong>Draw your story</strong></p>
       <p>
-          You can draw and organize your storyboards in a traditional way, either using our sketching system or using an external tool like Photoshop. Just add a board and start drawing.</p>
+        You can draw and organize your storyboards in a traditional way, either using our sketching system or using an external tool like Photoshop. Just add a board and start drawing.
+      </p>
 
-      <p><strong>Lay out scenes in Shot Generator</strong></p>
+
+
+      <!-- shot generator youtube playlist -->
+      <div
+        class="w-large"
+        style="--aspect-ratio: 16 / 9;"
+      >
+        <iframe
+          src="https://www.youtube-nocookie.com/embed/OOVaBLYLT4c"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+      </div>
+      <p class="m-0"><strong>Lay out scenes in Shot Generator</strong></p>
       <p>If you can't draw, you can also layout scenes using Shot Generator, a feature that allows you to quickly add characters, pose them, add objects, and set up cameras to create shots.</p>
 
-      <p><strong>Immerse yourself in your story.</strong></p>
+      <!-- shot generator vr youtube playlist -->
+      <div
+        class="w-large"
+        style="--aspect-ratio: 16 / 9;"
+      >
+        <iframe
+          src="https://www.youtube-nocookie.com/embed/videoseries?list=PLmP0TZ59zhSOH6RuX9g_7AMliLnFqx70E"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+      </div>
+      <p class="m-0"><strong>Immerse yourself in your story.</strong></p>
       <p>If you own an Oculus Quest or other VR headset, you can create and edit your scene in VR, and set up virtual cameras. This is the fastest way to set up scenes and shots.</p>
 
       <h1>Storyboarding results in better stories.</h1>
