simplify cover--main

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -126,10 +126,14 @@
         </video>
       </div>
 
-      <div class="inner-cover cover">
+      <div class="cover cover--main">
         <div class="centered">
-          <h1 class="headline font-thin mb-2" style="letter-spacing: -0.01em">Storyboarder</h1>          
-          <h2 class="font-thin" style="font-size: 1.25rem; margin: 0.5em 0 1.25em 0;">The best way to visualize your&nbsp;story.</h2>
+          <h1 class="headline font-thin mb-2" style="letter-spacing: -0.01em">
+            Storyboarder
+          </h1>
+          <h2 class="font-thin" style="font-size: 1.25rem; margin: 0.5em 0 1.25em 0; line-height: 1.35">
+            The best way to visualize your&nbsp;story.
+          </h2>
           <a href="#" class="button button--download" style="margin: 1em 0;">
             Download for Free
           </a>
