--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         -->
       </div>
 
-      <div class="inner-cover cover">
+      <div class="cover cover--main">
         <div class="centered">
           <h1 class="headline font-bold">A Future of Visual Storytelling</h1>
         </div>
