extract cover--main css for interior page cover headings

--- a/shot-core.html
+++ b/shot-core.html
@@ -124,18 +124,18 @@
 
       <div class="cover cover--main">
         <div class="centered">
-          <h1 class="headline font-thin mb-2" style="letter-spacing: -0.01em">
+          <h1 class="headline font-thin mb-2">
             Shot Core
           </h1>
-          <h2 class="font-thin" style="font-size: 1.25rem; margin: 0.5em 0 1.25em 0; line-height: 1.35">
+          <h2 class="font-thin subheading">
             The easiest way to prepare, shoot, and edit together footage.
           </h2>
-          <a href="#" class="button button--download" style="margin: 1em 0;">
+          <a href="#" class="button button--download">
             Sign Up to Beta Test
           </a>
-          <small style="opacity: 0.5; font-size: 80%; line-height: 1">
+          <p>
             Shot Core is currently <a href="https://github.com/wonderunit/shot-core">in development, available on GitHub.</a>
-          </small>
+          </p>
         </div>
       </div>
 
