--- a/storyboarder.html
+++ b/storyboarder.html
@@ -128,18 +128,18 @@
 
       <div class="cover cover--main">
         <div class="centered">
-          <h1 class="headline font-thin mb-2" style="letter-spacing: -0.01em">
+          <h1 class="headline font-thin mb-2">
             Storyboarder
           </h1>
-          <h2 class="font-thin" style="font-size: 1.25rem; margin: 0.5em 0 1.25em 0; line-height: 1.35">
+          <h2 class="font-thin subheading">
             The best way to visualize your&nbsp;story.
           </h2>
-          <a href="#" class="button button--download" style="margin: 1em 0;">
+          <a href="#" class="button button--download">
             Download for Free
           </a>
-          <small style="opacity: 0.5; font-size: 80%; line-height: 1">
+          <p>
             Version 2.0.1 available for Mac OS X, Windows, and Linux
-          </small>
+          </p>
         </div>
       </div>
 
